Bug 2054487 - Use a NullPrincipal to inherit for view-source.  a=diannaS DONTBUILD

Original Revision: https://phabricator.services.mozilla.com/D312051

Differential Revision: https://phabricator.services.mozilla.com/D312679