docshell/base/nsDocShell.cpp
@@ -4355,6 +4355,11 @@ nsDocShell::LoadPageAsViewSource(nsIDocShell* aOtherDocShell,
   if (!aOtherDocShell) {
     return NS_ERROR_INVALID_POINTER;
   }
+  auto* otherDocShell = nsDocShell::Cast(aOtherDocShell);
+
+  Document* otherDoc = otherDocShell->GetDocument();
+  NS_ENSURE_TRUE(otherDoc, NS_ERROR_UNEXPECTED);
+
   nsCOMPtr<nsIURI> newURI;
   nsresult rv = NS_NewURI(getter_AddRefs(newURI), aURI);
   if (NS_FAILED(rv)) {
@@ -4363,7 +4368,6 @@ nsDocShell::LoadPageAsViewSource(nsIDocShell* aOtherDocShell,
 
   RefPtr<nsDocShellLoadState> loadState;
   uint32_t cacheKey;
-  auto* otherDocShell = nsDocShell::Cast(aOtherDocShell);
   if (mozilla::SessionHistoryInParent()) {
     loadState = new nsDocShellLoadState(newURI);
     if (!otherDocShell->FillLoadStateFromCurrentEntry(*loadState)) {
@@ -4388,8 +4392,10 @@ nsDocShell::LoadPageAsViewSource(nsIDocShell* aOtherDocShell,
   // is only exposed to system code.  The triggering principal for this load
   // should be the system principal.
   loadState->SetTriggeringPrincipal(nsContentUtils::GetSystemPrincipal());
-  loadState->SetPrincipalToInherit(nullptr);
-  loadState->SetPartitionedPrincipalToInherit(nullptr);
+  RefPtr<nsIPrincipal> nullPrincipal =
+      NullPrincipal::CreateWithInheritedAttributes(otherDoc->NodePrincipal());
+  loadState->SetPrincipalToInherit(nullPrincipal);
+  loadState->SetPartitionedPrincipalToInherit(nullPrincipal);
   loadState->SetOriginalURI(nullptr);
   loadState->SetResultPrincipalURI(nullptr);
 
